--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,11 @@
-nav {
+/* .container-sm {
+  padding: 0%;
+} */
+
+
+
+
+/* nav {
     float: center;
     margin-top: 25px;
 }
@@ -15,8 +22,8 @@ nav a {
 
   /* header */
   
-  #masthead {
-    /* position: fixed; */
+  .header {
+    position: fixed;
     z-index: 99px;
     width: 100%;
     margin: 0 0 30px;
@@ -25,37 +32,17 @@ nav a {
     /* background-image:  url(""); */
     background-color: #f00f07;
     border-bottom: 2px solid #cccccc;
-  }
+  } */
   
-  #logo {
-    float: left;
-    width: 250px;
-    height: 90px;
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 90px;
-    color: #ffffff;
-    text-align: center;
-    text-decoration: none;
-    background: #4951b8;
-  }
+form-group {
+  border-left: 0ch;
+}
+ 
+
+
   
-  nav {
-    float: left;
-    margin-top: 25px;
-  }
-  
-  nav a {
-    display: inline-block;
-    padding-left: 15px;
-    margin-left: 15px;
-    line-height: 18px;
-    color: #999;
-    text-decoration: none;
-    border-left: 1px solid #efefef;
-  }
-  
-  nav a:first-child {
-    border-left: 0 none;
-  }
+  /* @media only screen and (max-width: 600px) {
+    body {
+      background-color: rgb(17, 65, 82);
+    }
+  } */
