--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,3 @@
-/* .container-sm {
-  padding: 0%;
-} */
-
-
-
-
-/* nav {
-    float: center;
-    margin-top: 25px;
+body {
+      background: green
 }
-
-nav a {
-    display: inline-block;
-    text-align: center;
-
-    line-height: 18px;
-    color: #999;
-    text-decoration: none;
-    border-left: 1px solid #efefef;
-  }
-
-  /* header */
-  
-  .header {
-    position: fixed;
-    z-index: 99px;
-    width: 100%;
-    margin: 0 0 30px;
-    overflow: auto;
-    color: #ffffff;
-    /* background-image:  url(""); */
-    background-color: #f00f07;
-    border-bottom: 2px solid #cccccc;
-  } */
-  
-  
-form-group {
-  border-left: 0ch;
-}
- 
-
-  
-  /* @media only screen and (max-width: 600px) {
-    body {
-      background-color: rgb(17, 65, 82);
-    }
-  } */
